--- a/styles/partials/_about.scss
+++ b/styles/partials/_about.scss
@@ -12,7 +12,7 @@
   p {
     font-size: 1.6rem;
     line-height: calc(1.6rem * 1.6);
-    color: rgba(245, 245, 245, 0.7);
+    // color: rgba(245, 245, 245, 0.7);
   }
 
   @media screen and (min-width: 600px) {
