testing.js load

--- a/src/components/Showcase.astro
+++ b/src/components/Showcase.astro
@@ -17,6 +17,8 @@ import image from "../images/Frame@1x.png";
   </div>
 </section>
 
+<script src="../../scripts/navigation.js"></script>
+
 <style lang="scss">
   .showcase {
     background: rgb(15, 15, 15);
@@ -61,7 +63,7 @@ import image from "../images/Frame@1x.png";
       }
     }
 
-    @media screen and (min-width: 600px) {
+    @media screen and (min-width: 768px) {
       grid-template-columns: 7fr 5fr;
       height: 740px;
       align-content: center;
